--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Taj's Musings
+title: Taj Gill
 email: taj@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   This site just contains some of my projects, thoughts and things I find interesting.
